src/test/ui/issues/issue-3820.stderr
error[E0369]: binary operation `*` cannot be applied to type `Thing`
  --> $DIR/issue-3820.rs:14:13
   |
LL |     let w = u * 3;
   |             ^^^^^
   |
   = note: an implementation of `std::ops::Mul` might be missing for `Thing`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
